Bugfix floor mesh initially invisible

--- a/index.html
+++ b/index.html
@@ -758,7 +758,7 @@
         side: THREE.DoubleSide,
       });
       const mesh = new THREE.Mesh(geometry, material);
-      mesh.visible = false;
+      // mesh.visible = false;
       return mesh;
     })();
     scene.add(floorMesh);
