--- a/index.html
+++ b/index.html
@@ -772,6 +772,37 @@
     })();
     scene.add(floorMesh);
 
+    const skyboxMesh = (() => {
+      const vertexShader = [
+        'varying vec3 vWorldPosition;',
+        'void main() {',
+          'vec4 worldPosition = modelMatrix * vec4( position, 1.0 );',
+          'vWorldPosition = worldPosition.xyz;',
+          'gl_Position = projectionMatrix * modelViewMatrix * vec4( position, 1.0 );',
+        '}'
+      ].join('\n');
+      const fragmentShader = [
+        'vec3 colorTop = vec3(33.0/256.0, 33.0/256.0, 33.0/256.0);',
+        'vec3 colorBottom = vec3(11.0/256.0, 11.0/256.0, 11.0/256.0);',
+        'varying vec3 vWorldPosition;',
+        'void main() {',
+          'vec3 pointOnSphere = normalize(vWorldPosition.xyz);',
+          'float f = 1.0;',
+          'if (pointOnSphere.y > - 0.2){',
+            'f = sin(pointOnSphere.y * 2.0);',
+          '}',
+          'gl_FragColor = vec4(mix(colorBottom,colorTop, f ), 1.0);',
+        '}'
+      ].join('\n');
+      const mesh = new THREE.Mesh(new THREE.BoxBufferGeometry(1000, 1000, 1000), new THREE.ShaderMaterial({
+        vertexShader,
+        fragmentShader,
+        side: THREE.BackSide,
+      }));
+      return mesh;
+    })();
+    scene.add(skyboxMesh);
+
     const animations = [];
     const _mod = (v, d) => {
       const n = v % d;
@@ -1340,37 +1371,6 @@
       return object;
     })();
     scene.add(menuMesh);
-
-    const skyboxMesh = (() => {
-      const vertexShader = [
-        'varying vec3 vWorldPosition;',
-        'void main() {',
-          'vec4 worldPosition = modelMatrix * vec4( position, 1.0 );',
-          'vWorldPosition = worldPosition.xyz;',
-          'gl_Position = projectionMatrix * modelViewMatrix * vec4( position, 1.0 );',
-        '}'
-      ].join('\n');
-      const fragmentShader = [
-        'vec3 colorTop = vec3(33.0/256.0, 33.0/256.0, 33.0/256.0);',
-        'vec3 colorBottom = vec3(11.0/256.0, 11.0/256.0, 11.0/256.0);',
-        'varying vec3 vWorldPosition;',
-        'void main() {',
-          'vec3 pointOnSphere = normalize(vWorldPosition.xyz);',
-          'float f = 1.0;',
-          'if (pointOnSphere.y > - 0.2){',
-            'f = sin(pointOnSphere.y * 2.0);',
-          '}',
-          'gl_FragColor = vec4(mix(colorBottom,colorTop, f ), 1.0);',
-        '}'
-      ].join('\n');
-      const mesh = new THREE.Mesh(new THREE.BoxBufferGeometry(1000, 1000, 1000), new THREE.ShaderMaterial({
-        vertexShader,
-        fragmentShader,
-        side: THREE.BackSide,
-      }));
-      return mesh;
-    })();
-    scene.add(skyboxMesh);
 
     const boxMesh = (() => {
       const geometry = new THREE.BoxBufferGeometry(1, 1, 1);
@@ -2510,6 +2510,7 @@
           }
 
           floorMesh.visible = false;
+          skyboxMesh.visible = false;
           scene.background = null;
         } else {
           _closeUrl(iframe);
@@ -2559,6 +2560,7 @@
         }
 
         floorMesh.visible = true;
+        skyboxMesh.visible = true;
         scene.background = _makeBackground();
       });
       container.appendChild(iframe);
