--- a/index.html
+++ b/index.html
@@ -2922,14 +2922,37 @@
               renderer.vr.setDevice(null);
               renderer.vr.setAnimationLoop(null);
 
-              fakeDisplay.session.end();
+              fakeDisplay.session.end()
+                .then(() =>
+                  display.requestSession({
+                    exclusive: true,
+                  })
+                    .then(session => {
+                      display.session = session;
 
-              display.requestPresent([{source: canvas}])
-                .then(() => {
-                  renderer.vr.setDevice(display);
-                  renderer.vr.setAnimationLoop(animate);
+                      session.requestAnimationFrame((timestamp, frame) => {
+                        renderer.vr.setSession(session, {
+                          frameOfReferenceType: 'stage',
+                        });
 
-                  scene.background = null;
+                        const viewport = session.baseLayer.getViewport(frame.views[0]);
+                        const width = viewport.width;
+                        const height = viewport.height;
+
+                        renderer.setSize(width * 2, height);
+
+                        renderer.vr.setDevice(display);
+                        renderer.vr.setAnimationLoop(animate);
+
+                        renderTarget = _makeRenderTarget(width * 2, height);
+
+                        screenQuad.material.uniforms.uTexture1.value = renderTarget.texture;
+                        screenQuad.material.uniforms.uDepth1.value = renderTarget.depthTexture;
+                      });
+                    })
+                )
+                .catch(err => {
+                  console.warn(err.stack);
                 });
             }
             break;
